fix btn styling and spacing

--- a/main.css
+++ b/main.css
@@ -132,6 +132,8 @@ a:hover:after :not(.nav-item.dropdown), table.table a:hover:after :not(.nav-item
 
 .btn{
   margin: 1px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 figure, img {
